--- a/pom.xml
+++ b/pom.xml
@@ -68,12 +68,12 @@
             <scope>test</scope>
         </dependency>
 
-        <dependency>
-            <groupId>com.airhacks</groupId>
-            <artifactId>jaxrs-cors</artifactId>
-            <version>0.0.2</version>
-            <scope>compile</scope>
-        </dependency>
+        <!--<dependency>-->
+            <!--<groupId>com.airhacks</groupId>-->
+            <!--<artifactId>jaxrs-cors</artifactId>-->
+            <!--<version>0.0.2</version>-->
+            <!--<scope>compile</scope>-->
+        <!--</dependency>-->
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
