--- a/pom.xml
+++ b/pom.xml
@@ -40,6 +40,11 @@
             <version>0.0.2</version>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>com.h2database</groupId>
+            <artifactId>h2</artifactId>
+            <version>1.4.195</version>
+        </dependency>
     </dependencies>
     <build>
         <finalName>payroll</finalName>
